Added log for monday week 9, made plan for week 9 - 10 and made minor changes to the plan for week 7 - 8 + minor changes to the frontpage

--- a/content/plan/uge 9 - 10.md
+++ b/content/plan/uge 9 - 10.md
@@ -6,3 +6,31 @@ ShowWordCount: false
 ShowRssButtonInSectionTermList: false
 weight: 20
 ---
+
+## Laravel
+
+### Mål
+Forståelse for de *fundementale* elementer ifølge [*PHP For Beginners*](https://laracasts.com/series/php-for-beginners-2023-edition) kurset
+
+### Aktiviter
+- Fortsætte med det ovennævnte kursus
+
+### Kriterier
+- Når jeg er færdig med kurset og har lavet de tilhørende opgaver
+
+### Evaluering
+
+---
+
+## Flutter
+
+### Mål
+- Forstå grundlæggende koncepter i Flutter-frameworket, herunder widgets, layouts, state management og animations.
+
+### Aktiviter
+- Fortsætte med (og muligvis færdiggøre) [*Flutter & Dart - The Complete Guide*](https://www.udemy.com/course/learn-flutter-dart-to-build-ios-android-apps/) kurset
+
+### Kriterier
+- Når jeg (muligvis) er færdig med kurset og har lavet de tilhørende opgaver, der kommer i løbet af kurset
+
+### Evaluering
