Added log for friday week 10 and plan for week 11 - 12

--- a/content/plan/uge 11 - 12.md
+++ b/content/plan/uge 11 - 12.md
@@ -6,3 +6,31 @@ ShowWordCount: false
 ShowRssButtonInSectionTermList: false
 weight: 30
 ---
+
+## Laravel
+
+### Mål
+- Forståelse for *Dynamic Web Applications* som beskrevet i [*PHP For Beginners*](https://laracasts.com/series/php-for-beginners-2023-edition) kurset
+
+### Aktiviter
+- Fortsætte med det ovennævnte kursus
+
+### Kriterier
+- Når jeg er færdig med segmentet i kurset, som omhander *Dynmaic Web Applications* og har lavet de tilhørende opgaver
+
+### Evaluering
+
+---
+
+## Flutter
+
+### Mål
+- Forstå grundlæggende koncepter i Flutter-frameworket, herunder widgets, layouts, interaktivitet og theming
+
+### Aktiviter
+- Færdiggøre *Roll Dice* appen, i kurset [*Flutter & Dart - The Complete Guide*](https://www.udemy.com/course/learn-flutter-dart-to-build-ios-android-apps/)
+
+### Kriterier
+- Når jeg er færdig med ovennævnte app og har lavet de tilhørende opgaver, der kommer i løbet af kurset
+
+### Evaluering
