--- a/content/plan/uge 9 - 10.md
+++ b/content/plan/uge 9 - 10.md
@@ -10,7 +10,7 @@ weight: 20
 ## Laravel
 
 ### Mål
-Forståelse for de *fundementale* elementer ifølge [*PHP For Beginners*](https://laracasts.com/series/php-for-beginners-2023-edition) kurset
+- Forståelse for de *fundementale* elementer ifølge [*PHP For Beginners*](https://laracasts.com/series/php-for-beginners-2023-edition) kurset
 
 ### Aktiviter
 - Fortsætte med det ovennævnte kursus
@@ -19,13 +19,14 @@ Forståelse for de *fundementale* elementer ifølge [*PHP For Beginners*](https:
 - Når jeg er færdig med kurset og har lavet de tilhørende opgaver
 
 ### Evaluering
-
+- Jeg har opnået mit mål med de *fundamentale* elementer i PHP, som blev beskrevet i kurset, samt de kriterier, der er sat.
+Udover det ovennævnte er jeg allerede begyndt på den næste del af kurset, som er en del af de næste to ugers læringsplan
 ---
 
 ## Flutter
 
 ### Mål
-- Forstå grundlæggende koncepter i Flutter-frameworket, herunder widgets, layouts, state management og animations.
+- Forstå grundlæggende koncepter i Flutter-frameworket, herunder widgets, layouts, state management og animations
 
 ### Aktiviter
 - Fortsætte med (og muligvis færdiggøre) [*Flutter & Dart - The Complete Guide*](https://www.udemy.com/course/learn-flutter-dart-to-build-ios-android-apps/) kurset
@@ -34,3 +35,5 @@ Forståelse for de *fundementale* elementer ifølge [*PHP For Beginners*](https:
 - Når jeg (muligvis) er færdig med kurset og har lavet de tilhørende opgaver, der kommer i løbet af kurset
 
 ### Evaluering
+- Jeg var alt for optimistisk angående tiden og hvor lang tid det ville tage med kurset, så jeg nåede ikke alle målene.
+Derfor er nogle af målene rykket til de næste to ugers sprint og følger bedre det brugte kursus
