Added log for friday week 12, tuesday and wednesday week 14 + plan for week 14 - 15

--- a/content/plan/uge 11 - 12.md
+++ b/content/plan/uge 11 - 12.md
@@ -19,6 +19,9 @@ weight: 30
 - Når jeg er færdig med segmentet i kurset, som omhander *Dynmaic Web Applications* og har lavet de tilhørende opgaver
 
 ### Evaluering
+- Der er sket en mindre omprioritering i løbet af sprintet, da kurset, jeg fulgte, begyndte at gå i retning af en vej, jeg ikke ønsker at følge.
+Udover det er der kommet en ny version af Laravel Framework 11, så jeg har fulgt en tutorial[^1], der gør brug af de nye ændringer.
+Fremadrettet vil der nok være mindre brug af kurser, der fokuserer på enkelte elementer, men derimod kurser, der bygger hele applikationer
 
 ---
 
@@ -34,3 +37,9 @@ weight: 30
 - Når jeg er færdig med ovennævnte app og har lavet de tilhørende opgaver, der kommer i løbet af kurset
 
 ### Evaluering
+- Det er gået langt bedre end det sidste sprint og har fået målet ved hjælp af aktiviteten.
+Generalt er det gået godt i dette sprint, udover det ovennævte blev jeg færdig med målet førtid og er derfor begyndt på den næste del af Flutter-kurset[^2]
+
+
+[^1]: [*Laravel 11 Crash Course*](https://www.youtube.com/watch?v=eUNWzJUvkCA)
+[^2]: [*Flutter & Dart - The Complete Guide*](https://www.udemy.com/course/learn-flutter-dart-to-build-ios-android-apps/)
