Made plan for week 16 + 17

--- a/content/plan/uge 14 - 15.md
+++ b/content/plan/uge 14 - 15.md
@@ -19,7 +19,8 @@ weight: 40
 - Når jeg er færdig med ovennævnte kursus og har lavet de tilhørende opgaver
 
 ### Evaluering
-
+- Det er gået mindre godt, da der ikke har været så meget fokus på dette emne i den sidste tid, da tiden enten er blevet brugt på det andet emne eller på praktiksøgning.
+Målene er flyttet til næste sprint, og der skal være mere fokus på Laravel i det næste sprint
 
 ---
 
@@ -36,3 +37,5 @@ Flutter lifecycle, conditional rendering, function passing, third-party package 
 - Når jeg er færdig med ovennævnte app og har lavet de tilhørende opgaver, der kommer i løbet af kurset
 
 ### Evaluering
+- Generelt er det gået godt. Jeg har nået målet ved hjælp af aktiviteten.
+Dog var målene alt for korte, da jeg nåede at blive færdig med dem for tidligt.
