--- a/content/plan/uge 16 - 17.md
+++ b/content/plan/uge 16 - 17.md
@@ -26,7 +26,7 @@ weight: 50
 ## Flutter
 
 ### Mål
-Forstå følgende koncepter i Flutter-frameworket:
+- Forstå følgende koncepter i Flutter-frameworket:
 Flutter DevTools, Futures, validering, gemning af data, dismissible-widgetten og hvordan de opsættes og bruges i Flutter
 
 ### Aktiviter
