Added log for monday week 18, plan for Laravel for week 18 - 19 + evaluated week 16 - 17

--- a/content/plan/uge 16 - 17.md
+++ b/content/plan/uge 16 - 17.md
@@ -19,7 +19,9 @@ weight: 50
 - Når jeg er færdig med ovennævnte kursus og har lavet de tilhørende opgaver
 
 ### Evaluering
-
+- Ikke helt nået målet med det, der var sat for dette sprint, og var også begyndt på et andet kursus end det, der var planlagt.
+Jeg har fulgt følgende [YouTube tutorial](https://www.youtube.com/watch?v=VrQRa-afCAk), og på trods af at jeg ikke nåede målet,
+er det stadig gået godt nok, da der skete en omprioritering
 
 ---
 
@@ -36,3 +38,4 @@ Flutter DevTools, Futures, validering, gemning af data, dismissible-widgetten og
 - Når jeg er færdig med ovennævnte app og har lavet de tilhørende opgaver, der kommer i løbet af kurset
 
 ### Evaluering
+- Det går fortsat godt med Flutter. Jeg har nået alle målene ved hjælp af aktiviteterne, og umiddelbart er der ingen problemer med Flutter-delen
