--- a/content/plan/uge 18 - 19.md
+++ b/content/plan/uge 18 - 19.md
@@ -10,13 +10,14 @@ weight: 60
 ## Laravel
 
 ### Mål
-- WIP
+- Forstå opsætningen og opbygningen af følgende koncepter i Laravel-frameworket og generalt om webudvikling:
+Opbygningen af en SaaS (Software as a Service), models, seeders, Stripe integration, React og Tailwind.css.
 
 ### Aktiviter
-- WIP
+- Færdiggøre følgende kurses: [Laravel 11 + React SaaS with Stripe Integration](https://www.youtube.com/watch?v=BdGvI3W0f9E)
 
 ### Kriterier
-- WIP
+- Når jeg er færdig med ovennævnte kursus og har lavet de tilhørende opgaver
 
 ### Evaluering
 
